--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
   <p onclick="">Hello JS-World</p>
   <script src="js/operatori.js"></script>
 <h2>Hello world </h2>
+<h3>how are you?</h3>
 </html>
